# gameboy-emulator

./: .gitignore
.github/workflows/: run-test.yml
gameboy-bin/: Cargo.toml
gameboy-bin/src/: main.rs
gameboy-frontend/: package.json  vite.config.ts
gameboy-frontend/src/: App.tsx
gameboy-lib/: Cargo.toml
gameboy-lib/src/: lib.rs  memory.rs
gameboy-lib/src/cpu/: cpu.rs  instructions.rs  mod.rs
gameboy-lib/src/cpu/command/: alu_commands.rs  bit_commands.rs  call_commands.rs  jump_commands.rs  load_commands.rs  misc_commands.rs  mod.rs  return_commands.rs  rotate_commands.rs
gameboy-lib/src/cpu/registers/: flag_register.rs  mod.rs  register.rs  register_8bit.rs  stack_pointer.rs
gameboy-lib/src/memory/: memory.rs  mod.rs  observer.rs
gameboy-wasm/: Cargo.toml
gameboy-wasm/src/: lib.rs
gameboy-web/: index.html  package.json  rsw.toml  vite.config.ts
gameboy-web/.rsw/: rsw.crates  rsw.info
gameboy-web/gameboy-wasm/: Cargo.toml
gameboy-web/gameboy-wasm/src/: lib.rs
gameboy-web/src/: App.tsx
gameboy-web/src/components/: ControlCenter.tsx
src/: main.rs  memory.rs
src/cpu/: cpu.rs  instructions.rs  mod.rs  registers.rs
src/cpu/registers/: flag_register.rs  mod.rs  register_8bit.rs  stack_pointer.rs
