[package]
name = "gameboy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serialize = ["serde", "serde_derive"]
wasm = ["wasm-bindgen"]

[dependencies]
wasm-bindgen = { version = "0.2.84", optional = true}
serde = { version = "1.0.194", optional = true }
serde_derive = { version = "1.0.194", optional = true }