[package]
name = "gameboy-wasm"
version = "0.1.0"
authors = ["Cedrik Hoffmann <cedrik.hoffmann@jgdperl.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
gameboy = { path = "../../gameboy-lib", features = ["wasm", "serialize"] }
wasm-bindgen = { version = "0.2.84", features = ["serde-serialize"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
log = "0.4.20"
serde = "1.0.194"
serde_derive = "1.0.194"
serde-wasm-bindgen = "0.6.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
